--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.zhenwei</groupId>
-  <artifactId>string-tools</artifactId>
+  <artifactId>String-Tools</artifactId>
   <version>1.0.0</version>
 
   <properties>
