--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.zhenwei</groupId>
-  <artifactId>String-Tools</artifactId>
+  <artifactId>string-tools</artifactId>
   <version>1.0.0</version>
 
   <properties>
@@ -25,6 +25,13 @@
     </dependency>
   </dependencies>
 
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub OWNER Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/zhenwei1108/StringTools</url>
+    </repository>
+  </distributionManagement>
 
 <!-- 注释插件 -->
   <build>
