--- a/ByteTools/pom.xml
+++ b/ByteTools/pom.xml
@@ -8,7 +8,10 @@
     <version>1.0.0</version>
   </parent>
 
-  <version>1.0.1</version>
+
   <artifactId>ByteTools</artifactId>
-  <packaging>pom</packaging>
+  <packaging>jar</packaging>
+
+
+
 </project>
