--- a/byte-tools/pom.xml
+++ b/byte-tools/pom.xml
@@ -5,10 +5,12 @@
   <parent>
     <groupId>com.github.wegoo</groupId>
     <artifactId>wegoo-tools</artifactId>
-    <version>1.0.0</version>
+    <version>${project.version}</version>
   </parent>
 
-  <artifactId>StringTools</artifactId>
+  <artifactId>byte-tools</artifactId>
   <packaging>jar</packaging>
+
+
 
 </project>
