--- a/string-tools/pom.xml
+++ b/string-tools/pom.xml
@@ -5,13 +5,10 @@
   <parent>
     <groupId>com.github.wegoo</groupId>
     <artifactId>wegoo-tools</artifactId>
-    <version>1.0.0</version>
+    <version>${project.version}</version>
   </parent>
 
-
-  <artifactId>ByteTools</artifactId>
+  <artifactId>string-tools</artifactId>
   <packaging>jar</packaging>
-
-
 
 </project>
